Fix spacing for decorated internal link, update themes title

--- a/app-next/components/link/decorated-internal-link.module.sass
+++ b/app-next/components/link/decorated-internal-link.module.sass
@@ -10,7 +10,7 @@
 		vertical-align: middle
 
 		@include size(1.1rem)
-		transform: translateY(-0.05rem)
+		transform: translateY(-1px)
 
 	&.compact
 		.text
@@ -24,4 +24,4 @@
 			
 		.symbol
 			@include size(1rem)
-			transform: translateY(-0.05rem)
+			transform: translateY(0px)
